# OOPCourse

./: CMakeLists.txt  README.md
notes/: MoveSemantics.md  ObjectSlicing.md  RAII_rules_of_dumb.md  Templates.md
src/: CMakeLists.txt  main.cpp
src/figures/: figure.h  pentagon.cpp  pentagon.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h
src/structures/: vector3D.cpp  vector3D.h
test/: CMakeLists.txt
test/structures/: test-vector3D.cpp
